--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -1,1 +1,33 @@
-<p>signup works!</p>
+<section class="signup-form">
+    <form #f="ngForm" (ngSubmit)="onSubmit(f)">
+        <mat-form-field>
+            <mat-label>Email</mat-label>
+            <input type="email" matInput placeholder="your e-mail" ngModel name="email" email required
+            #emailInput="ngModel">
+            <mat-error *ngIf="emailInput.hasError('required')">Field must be not empty</mat-error>
+            <mat-error *ngIf="!emailInput.hasError('required')">e-mail is invalid</mat-error>
+        </mat-form-field>
+        <mat-form-field hintLabel="Should be at least 6 characters long.">
+            <mat-label>Password</mat-label>
+            <input type="password"
+             matInput
+              placeholder="your password"
+               ngModel name="password"
+                required minLenght="6"
+            #pwInput="ngModel">
+            <mat-hint align="end">{{ pwInput.value?.length}} / 6</mat-hint>
+        </mat-form-field> 
+        <mat-form-field>
+            <input
+              matInput
+              placeholder="Your birthdate"
+              [matDatepicker]="picker"
+              [max]="maxDate">
+            <mat-datepicker-toggle
+              matSuffix
+              [for]="picker"></mat-datepicker-toggle>
+            <mat-datepicker #picker></mat-datepicker>
+          </mat-form-field>
+        <button type="submit" mat-raised-button color="primary">submit</button>
+    </form>
+</section>
