--- a/src/app/training/new-training/new-training.component.html
+++ b/src/app/training/new-training/new-training.component.html
@@ -1,27 +1,19 @@
-<section class="new-training" >
-    <mat-card >
-      <mat-card-title >Time to start a workout!</mat-card-title>
-      <mat-card-content >
+<section class="new-training">
+  <form (ngSubmit)="onStartTraining(f)" #f="ngForm">
+    <mat-card>
+      <mat-card-title>Time to start a workout!</mat-card-title>
+      <mat-card-content>
         <mat-form-field>
-          <mat-select placeholder="Favorite food">
-            <mat-option value="crunches">
-              Crunches
-            </mat-option>
-            <mat-option value="touch-toes">
-              Touch Toes
-            </mat-option>
-            <mat-option value="side-lunges">
-              Side Lunges
-            </mat-option>
-            <mat-option value="burpees">
-              Burpees
+          <mat-select placeholder="Chose Exercise" ngModel name="exercise" required>
+            <mat-option *ngFor="let e of exercises" [value]="e.id">
+              {{e.name}}
             </mat-option>
           </mat-select>
         </mat-form-field>
       </mat-card-content>
-      <mat-card-actions >
-        <button type="submit" mat-button (click)="onStartTraining()">Start</button>
+      <mat-card-actions>
+        <button type="submit" mat-button [disabled]="f.invalid">Start</button>
       </mat-card-actions>
     </mat-card>
-  </section>
-  
+  </form>
+</section>
