--- a/src/app/training/new-training/new-training.component.html
+++ b/src/app/training/new-training/new-training.component.html
@@ -5,8 +5,8 @@
       <mat-card-content>
         <mat-form-field>
           <mat-select placeholder="Chose Exercise" ngModel name="exercise" required>
-            <mat-option *ngFor="let e of exercises" [value]="e.id">
-              {{e.name}}
+            <mat-option *ngFor="let exercise of exercises" [value]="exercise.id">
+              {{exercise.name}}
             </mat-option>
           </mat-select>
         </mat-form-field>
